--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="contenedor clasePrueba">
+        <h1>jhomar estuvo por aquí:)</h1>
         <section class="s1"></section>
         <section class="s2"></section>
         <section class="s3"></section>
