Este es un comentario con los chicos de RAS

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="contenedor clasePrueba">
-        <h1>jhomar estuvo por aquí:)</h1>
-        <section class="s1"></section>
+        <h1>Los chicos de RAS estuvieron por aquí:)</h1>
+        <section class="s1">Hubo temblor</section>
         <section class="s2"></section>
         <section class="s3"></section>
         <section class="s4"></section>
